syntax = "proto3";

package example;

service ExampleService {
  rpc GetExampleData (ExampleRequest) returns (ExampleResponse);
}

message ExampleRequest {
  string param1 = 1;
}

message ExampleResponse {
  string result = 1;
}